--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0561.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0561.html
@@ -473,14 +473,24 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 1046 766 1123 803" lang="grc">
+        <span id="w_90_0" class="ocr_word" title="bbox 1046 766 1123 803">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοῦ ὑποκελμένου φθορᾶς,</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_91" class="ocr_word" title="bbox 1708 780 1850 819" lang="grc">
+        <span id="w_90_1" class="ocr_word" title="bbox 1046 766 1123 803">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑτέρως</ins>
+            <ins class="alt" title="nlp 2.00">ὑποκειμένου</ins>
+          </span>
+        </span>
+        <span id="w_91_0" class="ocr_word" title="bbox 1708 780 1850 819">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">φθορᾶς,</ins>
+          </span>
+        </span>
+        <span id="w_91_1" class="ocr_word" title="bbox 1708 780 1850 819">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἑτέρως</ins>
           </span>
         </span>
       </span>
@@ -2059,8 +2069,7 @@
         </span>
         <span id="w_395" class="ocr_word" title="bbox 1773 2716 1838 2739">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ora.</ins>
-            <del title="nlp 0.90">ora.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1852 2706 1884 2739">
@@ -2071,31 +2080,44 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 2761 1929 2816">
-        <span id="w_397" class="ocr_word" title="bbox 109 2770 130 2805" lang="grc">
+        <span id="w_397_0" class="ocr_word" title="bbox 109 2770 130 2805">
           <span class="alternatives">
-            <ins title="nlp 2.00">8 οὖν] δὲ Κ: τε V</ins>
+            <ins class="alt" title="nlp 2.00">8</ins>
           </span>
         </span>
-        <span id="w_398" class="ocr_word" title="bbox 602 2771 698 2816" lang="grc">
+        <span id="w_397_1" class="ocr_word" title="bbox 109 2770 130 2805">
           <span class="alternatives">
-            <ins title="nlp 2.00">φησὶ] p. 12,24</ins>
+            <ins class="alt" title="nlp 2.00">οὖν]</ins>
+          </span>
+        </span>
+        <span id="w_398_0" class="ocr_word" title="bbox 602 2771 698 2816">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
+          </span>
+        </span>
+        <span id="w_398_1" class="ocr_word" title="bbox 602 2771 698 2816">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">K:</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1028 2767 1070 2800">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10</ins>
+            <ins title="nlp 2.00">τε V φησὶ] p. 12,24</ins>
           </span>
         </span>
         <span id="w_400" class="ocr_word" title="bbox 1096 2767 1129 2800">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ol</ins>
-            <del title="nlp 0.90">ol</del>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 1157 2777 1224 2801">
+        <span id="w_401_0" class="ocr_word" title="bbox 1157 2777 1224 2801">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 1157 2777 1224 2801">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1250 2767 1281 2799">
@@ -2510,8 +2532,7 @@
         </span>
         <span id="w_476" class="ocr_word" title="bbox 1569 3059 1609 3101">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xfj</ins>
-            <del title="nlp 0.90">xfj</del>
+            <ins title="nlp 2.00">τῆ</ins>
           </span>
         </span>
         <span id="w_477" class="ocr_word" title="bbox 1637 3055 1761 3090" lang="grc">
