--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0512.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0512.html
@@ -329,7 +329,7 @@
         </span>
         <span lang="grc" title="bbox 758 484 822 539" class="ocr_word" id="w_61">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">οὐ</ins>
+            <ins title="nlp 2.00">(οὐ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 853 500 924 539" class="ocr_word" id="w_62">
@@ -587,7 +587,7 @@
         </span>
         <span lang="grc" title="bbox 1312 779 1338 817" class="ocr_word" id="w_114">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ᾖ</ins>
+            <ins title="nlp 2.00">ᾖ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1389 778 1444 803" class="ocr_word" id="w_115">
@@ -1192,7 +1192,7 @@
         </span>
         <span lang="grc" title="bbox 585 1454 700 1507" class="ocr_word" id="w_232">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">εἶναι</ins>
+            <ins title="nlp 2.00">(εἶναι</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 731 1470 804 1509" class="ocr_word" id="w_233">
@@ -1373,7 +1373,7 @@
       <span title="bbox 404 1662 2096 1718" class="ocr_line">
         <span lang="grc" title="bbox 404 1664 570 1717" class="ocr_word" id="w_267">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">μᾶλλον</ins>
+            <ins title="nlp 2.00">(μᾶλλον</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 607 1663 679 1718" class="ocr_word" id="w_268">
@@ -1423,7 +1423,7 @@
         </span>
         <span lang="grc" title="bbox 1750 1663 1885 1717" class="ocr_word" id="w_277">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἧττον</ins>
+            <ins title="nlp 2.00">(ἧττον</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1916 1662 1988 1716" class="ocr_word" id="w_278">
@@ -1564,17 +1564,7 @@
         </span>
         <span id="w_304_1" class="ocr_word" title="bbox 406 1875 483 1912">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δια</ins>
-          </span>
-        </span>
-        <span id="w_305_0" class="ocr_word" title="bbox 517 1870 724 1927">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">|</ins>
-          </span>
-        </span>
-        <span id="w_305_1" class="ocr_word" title="bbox 517 1870 724 1927">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">φορῶν</ins>
+            <ins class="alt" title="nlp 2.00">δια|φορῶν</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 755 1871 908 1925" class="ocr_word" id="w_306">
@@ -1627,9 +1617,9 @@
             <ins title="nlp 2.00">κατηγορεῖται;</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 2082 1872 2166 1909" class="ocr_word" id="w_316">
+        <span id="w_316_0" class="ocr_word" title="bbox 2082 1872 2166 1909">
           <span class="alternatives">
-            <ins title="nlp 2.00">192ν</ins>
+            <ins class="alt" title="nlp 2.00">192v</ins>
           </span>
         </span>
       </span>
@@ -1666,7 +1656,7 @@
         </span>
         <span lang="grc" title="bbox 1778 1938 1985 1992" class="ocr_word" id="w_324">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">οὐδέποτε</ins>
+            <ins title="nlp 2.00">(περιπεσῇ</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 2024 1940 2096 1992" class="ocr_word" id="w_325">
@@ -1735,7 +1725,7 @@
         </span>
         <span lang="grc" title="bbox 512 2078 772 2132" class="ocr_word" id="w_337">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">λογικότητα);</ins>
+            <ins title="nlp 2.00">λογικότητα),</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 815 2095 847 2118" class="ocr_word" id="w_338">
@@ -2029,9 +2019,14 @@
             <ins title="nlp 2.00">ὡς πρὸς τὰ </ins>
           </span>
         </span>
-        <span id="w_394_0" class="ocr_word" title="bbox 1127 2514 1223 2556">
+        <span id="w_394_0_0" class="ocr_word" title="bbox 1127 2514 1223 2556">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">μετ᾿</ins>
+          </span>
+        </span>
+        <span id="w_394_0_1" class="ocr_word" title="bbox 1127 2514 1223 2556">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_394_1" class="ocr_word" title="bbox 1127 2514 1223 2556">
@@ -2049,17 +2044,11 @@
             <ins class="alt" title="nlp 2.00">ἀλλοίαν</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1731 2513 1845 2570" class="ocr_word" id="w_396">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἔχει.</ins>
-          </span>
-        </span>
       </span>
       <span title="bbox 515 2619 2095 2676" class="ocr_line">
         <span title="bbox 515 2620 576 2663" class="ocr_word" id="w_397">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’Ev</ins>
-            <del title="nlp 0.90">’Ev</del>
+            <ins title="nlp 2.00">Ἐν</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 600 2637 724 2675" class="ocr_word" id="w_398">
@@ -2399,9 +2388,14 @@
             <ins title="nlp 1.00" class="alt">21</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 991 2969 1076 2992" class="ocr_word" id="w_461">
+        <span id="w_461_0" class="ocr_word" title="bbox 991 2969 1076 2992">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐστιν—ἧττον</ins>
+            <ins class="alt" title="nlp 2.00">ἐστιν—ἧττον</ins>
+          </span>
+        </span>
+        <span id="w_461_1" class="ocr_word" title="bbox 991 2969 1076 2992">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span title="bbox 1269 2970 1335 2992" class="ocr_word" id="w_462">
@@ -2439,11 +2433,6 @@
         <span lang="grc" title="bbox 2060 2968 2093 2990" class="ocr_word" id="w_468">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἂν</ins>
-          </span>
-        </span>
-        <span title="bbox 2119 2968 2160 3000" class="ocr_word" id="w_469">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τῆ</ins>
           </span>
         </span>
       </span>
