--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0513.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0513.html
@@ -444,9 +444,14 @@
             <ins class="alt" title="nlp 1.00">6,4</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 346 1030 442 1086">
+        <span id="w_84_0" class="ocr_word" title="bbox 346 1030 442 1086">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;῾Ως</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Ὡς</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 346 1030 442 1086">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 474 1030 548 1070" lang="grc">
@@ -457,11 +462,6 @@
         <span id="w_86" class="ocr_word" title="bbox 581 1031 628 1070" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_87" class="ocr_word" title="bbox 661 1029 914 1085" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πλεῖστον&amp;#x003E;.</ins>
           </span>
         </span>
       </span>
@@ -1210,7 +1210,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1105 2815 1297 2861" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δηλοῦντες</ins>
+            <ins title="nlp 2.00">(δηλοῦντες</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1315 2814 1356 2854">
@@ -1491,9 +1491,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_280_0" class="ocr_word" title="bbox 271 3071 333 3092">
+        <span id="w_280_0_0" class="ocr_word" title="bbox 271 3071 333 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οὐχ</ins>
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_280_0_1" class="ocr_word" title="bbox 271 3071 333 3092">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_280_1" class="ocr_word" title="bbox 271 3071 333 3092">
@@ -1556,12 +1561,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_292" class="ocr_word" title="bbox 1836 3039 1898 3071">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">KT</ins>
-            <del title="nlp 0.90">KT</del>
           </span>
         </span>
       </span>
