--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0605.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0605.html
@@ -161,14 +161,24 @@
             <ins class="alt" title="nlp 1.00">εἴρηται,</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 790 295 815 319" lang="grc">
+        <span id="w_28_0" class="ocr_word" title="bbox 790 295 815 319">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 846 296 872 320">
+        <span id="w_28_1" class="ocr_word" title="bbox 790 295 815 319">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_29_0" class="ocr_word" title="bbox 846 296 872 320">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">*</ins>
+          </span>
+        </span>
+        <span id="w_29_1" class="ocr_word" title="bbox 846 296 872 320">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 903 297 934 321" lang="grc">
@@ -201,16 +211,6 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_36" class="ocr_word" title="bbox 1539 302 1630 339" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμῖν</ins>
-          </span>
-        </span>
-        <span id="w_37" class="ocr_word" title="bbox 1662 288 1790 340" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δῆλον.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 180 350 1832 408">
         <span id="w_38" class="ocr_word" title="bbox 180 372 212 405">
@@ -219,9 +219,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 236 362 326 395">
+        <span id="w_39_0" class="ocr_word" title="bbox 236 362 326 395">
           <span class="alternatives">
-            <ins title="nlp 2.00">16α1</ins>
+            <ins class="alt" title="nlp 2.00">16al</ins>
+          </span>
+        </span>
+        <span id="w_39_1" class="ocr_word" title="bbox 236 362 326 395">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 378 367 419 390" lang="grc">
@@ -267,11 +272,6 @@
         <span id="w_48" class="ocr_word" title="bbox 1416 370 1484 407" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τάξεως</ins>
-          </span>
-        </span>
-        <span id="w_49" class="ocr_word" title="bbox 1675 369 1832 401" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τούτων,</ins>
           </span>
         </span>
       </span>
@@ -854,9 +854,14 @@
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 1342 1049 1374 1073" lang="grc">
+        <span id="w_162_0" class="ocr_word" title="bbox 1342 1049 1374 1073">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τί</ins>
+            <ins class="alt" title="nlp 2.00">τί</ins>
+          </span>
+        </span>
+        <span id="w_162_1" class="ocr_word" title="bbox 1342 1049 1374 1073">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">η&amp;#x772;</ins>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 1461 1037 1586 1087" lang="grc">
@@ -1035,9 +1040,14 @@
             <ins class="alt" title="nlp 1.00">ψεύδεται·</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1234 1237 1295 1276" lang="grc">
+        <span id="w_197_0" class="ocr_word" title="bbox 1234 1237 1295 1276">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_197_1" class="ocr_word" title="bbox 1234 1237 1295 1276">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1326 1252 1396 1291" lang="grc">
@@ -1058,11 +1068,6 @@
         <span id="w_201" class="ocr_word" title="bbox 1702 1238 1765 1277" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_202" class="ocr_word" title="bbox 1795 1253 1837 1277" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1149,24 +1154,24 @@
             <ins title="nlp 2.00">,</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1506 1388 1532 1413" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 1506 1388 1532 1413">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_221" class="ocr_word" title="bbox 1563 1373 1654 1414">
+        <span id="w_220_1" class="ocr_word" title="bbox 1506 1388 1532 1413">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_222_0" class="ocr_word" title="bbox 1691 1373 1839 1428">
+        <span id="w_221_0" class="ocr_word" title="bbox 1563 1373 1654 1414">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">῾ὁ</ins>
+            <ins class="alt" title="nlp 2.00">*</ins>
           </span>
         </span>
-        <span id="w_222_1" class="ocr_word" title="bbox 1691 1373 1839 1428">
+        <span id="w_221_1" class="ocr_word" title="bbox 1563 1373 1654 1414">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τρέχων</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1711,12 +1716,7 @@
         </span>
         <span id="w_329" class="ocr_word" title="bbox 686 2072 882 2110" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">περιπατῶ’</ins>
-          </span>
-        </span>
-        <span id="w_331" class="ocr_word" title="bbox 921 2088 930 2103">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">περιπατῶ’,</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 963 2071 1093 2109" lang="grc">
@@ -2103,7 +2103,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1799 2477 1842 2501" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εὖ</ins>
+            <ins title="nlp 2.00">῾εὖ</ins>
           </span>
         </span>
       </span>
@@ -2445,11 +2445,6 @@
             <ins title="nlp 2.00">16b19</ins>
           </span>
         </span>
-        <span id="w_472" class="ocr_word" title="bbox 249 2943 290 2977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">19</ins>
-          </span>
-        </span>
         <span id="w_473" class="ocr_word" title="bbox 317 2956 400 2976" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτὰ</ins>
@@ -2472,7 +2467,7 @@
         </span>
         <span id="w_477" class="ocr_word" title="bbox 672 2951 772 2972" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑαυτ,ὰ</ins>
+            <ins title="nlp 2.00">ἑαυτὰ</ins>
           </span>
         </span>
         <span id="w_478" class="ocr_word" title="bbox 789 2938 946 2982" lang="grc">
@@ -2598,13 +2593,12 @@
       <span class="ocr_line" title="bbox 122 3047 1914 3106">
         <span id="w_500" class="ocr_word" title="bbox 122 3060 178 3093">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xal</ins>
-            <del title="nlp 0.90">xal</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_501" class="ocr_word" title="bbox 196 3064 284 3106" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βῆμα</ins>
+            <ins title="nlp 2.00">ῥῆμα</ins>
           </span>
         </span>
         <span id="w_502" class="ocr_word" title="bbox 379 3058 423 3091">
@@ -2766,7 +2760,7 @@
         </span>
         <span id="w_532" class="ocr_word" title="bbox 1790 3139 1863 3173" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μερὶ</ins>
+            <ins title="nlp 2.00">μέρι</ins>
           </span>
         </span>
         <span id="w_533" class="ocr_word" title="bbox 1888 3128 1913 3160">
@@ -2777,9 +2771,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1592 3186 1649 3229">
-        <span id="w_534" class="ocr_word" title="bbox 1592 3186 1649 3229" lang="grc">
+        <span id="w_534_0" class="ocr_word" title="bbox 1592 3186 1649 3229">
           <span class="alternatives">
-            <ins title="nlp 2.00">1&amp;#x203B;</ins>
+            <ins class="alt" title="nlp 2.00">1*</ins>
           </span>
         </span>
       </span>
