--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0562.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0562.html
@@ -2199,9 +2199,9 @@
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_427" class="ocr_word" title="bbox 1964 2688 2083 2740" lang="grc">
+        <span id="w_427_0" class="ocr_word" title="bbox 1964 2688 2083 2740">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπάροὐ</ins>
+            <ins class="alt" title="nlp 2.00">ὑπάρχειν</ins>
           </span>
         </span>
       </span>
@@ -2307,12 +2307,7 @@
         </span>
         <span id="w_448" class="ocr_word" title="bbox 1390 2887 1400 2918">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
-        <span id="w_449" class="ocr_word" title="bbox 1415 2887 1427 2919">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_450" class="ocr_word" title="bbox 1458 2885 1539 2927" lang="grc">
@@ -2488,8 +2483,7 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 2002 2998 2155 3032">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aTtoXXeiv</ins>
-            <del title="nlp 0.90">aTtoXXeiv</del>
+            <ins title="nlp 2.00">ἀπόλλειν</ins>
           </span>
         </span>
       </span>
@@ -2639,7 +2633,7 @@
         </span>
         <span id="w_507" class="ocr_word" title="bbox 1820 3119 1865 3151" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Κ’</ins>
+            <ins title="nlp 2.00">K1</ins>
           </span>
         </span>
         <span id="w_508" class="ocr_word" title="bbox 2025 3115 2069 3149">
@@ -2694,11 +2688,6 @@
         <span id="w_517_0" class="ocr_word" title="bbox 1174 3177 1378 3221">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">συλαμβάνει</ins>
-          </span>
-        </span>
-        <span id="w_517_1" class="ocr_word" title="bbox 1174 3177 1378 3221">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Τ</ins>
           </span>
         </span>
         <span id="w_518" class="ocr_word" title="bbox 1404 3177 1431 3210">
