--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0563.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0563.html
@@ -465,9 +465,14 @@
             <ins title="nlp 2.00">οὔτε</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 529 618 636 643" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 529 618 636 643">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὔτε</ins>
+            <ins class="alt" title="nlp 2.00">γένος</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 529 618 636 643">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὔτε</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 672 601 798 642" lang="grc">
@@ -475,9 +480,14 @@
             <ins class="alt" title="nlp 1.00">εἶδος</ins>
           </span>
         </span>
-        <span id="w_89" class="ocr_word" title="bbox 835 617 942 640" lang="grc">
+        <span id="w_89_0" class="ocr_word" title="bbox 835 617 942 640">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐτι</ins>
+            <ins class="alt" title="nlp 2.00">οὔτε</ins>
+          </span>
+        </span>
+        <span id="w_89_1" class="ocr_word" title="bbox 835 617 942 640">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 974 615 1178 654" lang="grc">
@@ -498,11 +508,6 @@
         <span id="w_93" class="ocr_word" title="bbox 1505 615 1695 640" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δύναται</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 1733 599 1852 639" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
           </span>
         </span>
       </span>
@@ -1011,9 +1016,14 @@
             <ins class="alt" title="nlp 1.00">γένους</ins>
           </span>
         </span>
-        <span id="w_195" class="ocr_word" title="bbox 1331 1152 1457 1206" lang="grc">
+        <span id="w_195_0" class="ocr_word" title="bbox 1331 1152 1457 1206">
           <span class="alternatives">
-            <ins title="nlp 2.00">γένους</ins>
+            <ins class="alt" title="nlp 2.00">‘γένος</ins>
+          </span>
+        </span>
+        <span id="w_195_1" class="ocr_word" title="bbox 1331 1152 1457 1206">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1480 1153 1580 1193" lang="grc">
@@ -1029,11 +1039,6 @@
         <span id="w_198" class="ocr_word" title="bbox 1647 1168 1734 1192" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὔτε</ins>
-          </span>
-        </span>
-        <span id="w_199" class="ocr_word" title="bbox 1756 1151 1856 1194" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶδος</ins>
           </span>
         </span>
       </span>
@@ -1683,11 +1688,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 129 2198 1866 2258">
-        <span id="w_326" class="ocr_word" title="bbox 129 2216 142 2236">
-          <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
-          </span>
-        </span>
         <span id="w_327" class="ocr_word" title="bbox 177 2217 408 2258" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀχωρίστων</ins>
@@ -2500,8 +2500,7 @@
         </span>
         <span id="w_481" class="ocr_word" title="bbox 797 3063 862 3084">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oin.</ins>
-            <del title="nlp 0.90">oin.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_482" class="ocr_word" title="bbox 892 3050 981 3082">
@@ -2665,8 +2664,7 @@
         </span>
         <span id="w_510" class="ocr_word" title="bbox 1347 3161 1377 3193">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_511" class="ocr_word" title="bbox 1523 3157 1567 3190">
