--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0655.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0655.html
@@ -36,13 +36,17 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 827 130 1247 169">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTERPRETATIONK</ins>
-            <del title="nlp 0.90">INTERPRETATIONK</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 1276 136 1397 181">
+        <span id="w_5_0" class="ocr_word" title="bbox 1276 136 1397 181">
           <span class="alternatives">
-            <ins title="nlp 2.00">[Aiist.</ins>
+            <ins class="alt" title="nlp 2.00">[Arist.</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 1276 136 1397 181">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1423 150 1455 182">
@@ -54,11 +58,6 @@
         <span id="w_7" class="ocr_word" title="bbox 1475 140 1513 172">
           <span class="alternatives">
             <ins title="nlp 2.00">21a34]</ins>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 1821 143 1874 183">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">53</ins>
           </span>
         </span>
       </span>
@@ -78,14 +77,14 @@
             <ins title="nlp 2.00">τμήματοσς.</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1162 384 1346 440">
+        <span id="w_13_0" class="ocr_word" title="bbox 1162 384 1346 440">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; Πρᾶξις</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 1377 388 1432 442">
+        <span id="w_13_1" class="ocr_word" title="bbox 1162 384 1346 440">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;.&amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ.&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -96,9 +95,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 200 523 318 557">
+        <span id="w_16_0" class="ocr_word" title="bbox 200 523 318 557">
           <span class="alternatives">
-            <ins title="nlp 2.00">21α34</ins>
+            <ins class="alt" title="nlp 2.00">21a34</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 200 523 318 557">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 384 510 570 552" lang="grc">
@@ -131,11 +135,6 @@
             <ins class="alt" title="nlp 1.00">ἔχουσιν</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1755 542 1801 566" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 266 580 1676 643">
         <span id="w_24" class="ocr_word" title="bbox 266 581 526 635" lang="grc">
@@ -143,14 +142,24 @@
             <ins class="alt" title="nlp 1.00">ἀποφάσεις</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 557 580 647 634" lang="grc">
+        <span id="w_25_0" class="ocr_word" title="bbox 557 580 647 634">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; καὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 678 584 978 638" lang="grc">
+        <span id="w_25_1" class="ocr_word" title="bbox 557 580 647 634">
           <span class="alternatives">
-            <ins title="nlp 2.00">καταφάσεις &amp;#x003C;</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_26_0" class="ocr_word" title="bbox 678 584 978 638">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καταφάσεις&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_26_1" class="ocr_word" title="bbox 678 584 978 638">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1009 601 1122 640" lang="grc">
@@ -166,16 +175,6 @@
         <span id="w_29" class="ocr_word" title="bbox 1410 608 1472 632" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1502 609 1547 632" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τά</ins>
-          </span>
-        </span>
-        <span id="w_31" class="ocr_word" title="bbox 1579 594 1676 638" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑξῆς.</ins>
           </span>
         </span>
       </span>
@@ -330,9 +329,14 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 1143 863 1374 898" lang="grc">
+        <span id="w_61_0" class="ocr_word" title="bbox 1143 863 1374 898">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀποφάσεισ,</ins>
+            <ins class="alt" title="nlp 2.00">ἀποφάσεις,</ins>
+          </span>
+        </span>
+        <span id="w_61_1" class="ocr_word" title="bbox 1143 863 1374 898">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1417 868 1588 892" lang="grc">
@@ -348,11 +352,6 @@
         <span id="w_64" class="ocr_word" title="bbox 1691 869 1744 893" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τίς</ins>
-          </span>
-        </span>
-        <span id="w_65" class="ocr_word" title="bbox 1773 870 1796 893" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
       </span>
@@ -1143,9 +1142,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 1021 1798 1028 1812" lang="grc">
+        <span id="w_219_0" class="ocr_word" title="bbox 1021 1798 1028 1812">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Σωκρότης</ins>
+            <ins class="alt" title="nlp 2.00">῾Σωκράτης</ins>
+          </span>
+        </span>
+        <span id="w_219_1" class="ocr_word" title="bbox 1021 1798 1028 1812">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1280 1803 1407 1840" lang="grc">
@@ -1161,11 +1165,6 @@
         <span id="w_222" class="ocr_word" title="bbox 1629 1803 1690 1856" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_223" class="ocr_word" title="bbox 1722 1819 1790 1857" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -1220,9 +1219,14 @@
             <ins class="alt" title="nlp 1.00">τρόπον</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1704 1885 1767 1926" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 1704 1885 1767 1926">
           <span class="alternatives">
-            <ins title="nlp 2.00">ση–</ins>
+            <ins class="alt" title="nlp 2.00">σημαίνει,</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 1704 1885 1767 1926">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1786 1885 1804 1909">
@@ -1230,18 +1234,8 @@
             <ins title="nlp 2.00">f.</ins>
           </span>
         </span>
-        <span id="w_237" class="ocr_word" title="bbox 1815 1882 1864 1910">
-          <span class="alternatives">
-            <ins title="nlp 2.00">72r</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 134 1933 1791 1994">
-        <span id="w_238" class="ocr_word" title="bbox 134 1936 269 1988" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαίνει,</ins>
-          </span>
-        </span>
         <span id="w_239" class="ocr_word" title="bbox 301 1952 354 1979" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -1252,9 +1246,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 433 1935 442 1950" lang="grc">
+        <span id="w_241_0" class="ocr_word" title="bbox 433 1935 442 1950">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Σωκράτης</ins>
+            <ins class="alt" title="nlp 2.00">῾Σωκράτης</ins>
+          </span>
+        </span>
+        <span id="w_241_1" class="ocr_word" title="bbox 433 1935 442 1950">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_242" class="ocr_word" title="bbox 686 1936 783 1976" lang="grc">
@@ -1290,11 +1289,6 @@
         <span id="w_248" class="ocr_word" title="bbox 1400 1951 1573 1991" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σημαίνει</ins>
-          </span>
-        </span>
-        <span id="w_249" class="ocr_word" title="bbox 1594 1939 1791 1994" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνταῦθα),</ins>
           </span>
         </span>
       </span>
@@ -2026,8 +2020,7 @@
         </span>
         <span id="w_389" class="ocr_word" title="bbox 124 2882 186 2905">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Tia;</ins>
-            <del title="nlp 0.90">Tia;</del>
+            <ins title="nlp 2.00">πᾶς</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 212 2879 297 2902">
@@ -2115,8 +2108,7 @@
         </span>
         <span id="w_405" class="ocr_word" title="bbox 438 2926 479 2959">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
         <span id="w_406" class="ocr_word" title="bbox 617 2926 660 2959">
@@ -2238,13 +2230,7 @@
         </span>
         <span id="w_427" class="ocr_word" title="bbox 1426 2981 1488 3014">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">173</ins>
-          </span>
-        </span>
-        <span id="w_428" class="ocr_word" title="bbox 1498 2991 1511 3006">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">r</ins>
-            <del title="nlp 0.90">r</del>
+            <ins class="alt" title="nlp 2.00">173r</ins>
           </span>
         </span>
         <span id="w_429" class="ocr_word" title="bbox 1660 2980 1703 3015">
@@ -2266,8 +2252,7 @@
       <span class="ocr_line" title="bbox 56 3038 1852 3086">
         <span id="w_432" class="ocr_word" title="bbox 56 3040 288 3084">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’AvaXuTty-oT;]</ins>
-            <del title="nlp 0.90">’AvaXuTty-oT;]</del>
+            <ins title="nlp 2.00">Ἀναλυτικοῖς]</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 314 3042 416 3076">
@@ -2293,9 +2278,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_438" class="ocr_word" title="bbox 655 3040 746 3073">
+        <span id="w_438_0" class="ocr_word" title="bbox 655 3040 746 3073">
           <span class="alternatives">
-            <ins title="nlp 2.00">25α1</ins>
+            <ins class="alt" title="nlp 2.00">25a1</ins>
+          </span>
+        </span>
+        <span id="w_438_1" class="ocr_word" title="bbox 655 3040 746 3073">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_439" class="ocr_word" title="bbox 908 3040 950 3073">
@@ -2310,17 +2300,7 @@
         </span>
         <span id="w_441" class="ocr_word" title="bbox 1072 3041 1227 3083" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπάρχειν</ins>
-          </span>
-        </span>
-        <span id="w_442" class="ocr_word" title="bbox 1239 3058 1278 3061">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_443" class="ocr_word" title="bbox 1289 3040 1443 3083" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπάρχειν</ins>
+            <ins title="nlp 2.00">ὑπάρχειν—ὑπάρχειν</ins>
           </span>
         </span>
         <span id="w_444" class="ocr_word" title="bbox 1469 3038 1489 3084" lang="grc">
@@ -2339,12 +2319,6 @@
             <del title="nlp 0.90">ex</del>
           </span>
         </span>
-        <span id="w_447" class="ocr_word" title="bbox 1668 3039 1852 3074">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aristotele</ins>
-            <del title="nlp 0.90">Aristotele</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 57 3096 1851 3144">
         <span id="w_448" class="ocr_word" title="bbox 57 3101 179 3144">
@@ -2356,12 +2330,6 @@
         <span id="w_449" class="ocr_word" title="bbox 191 3112 196 3133" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_450" class="ocr_word" title="bbox 222 3113 259 3133">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xo</ins>
-            <del title="nlp 0.90">xo</del>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 288 3100 387 3142">
@@ -2378,8 +2346,7 @@
         </span>
         <span id="w_453" class="ocr_word" title="bbox 481 3100 553 3140">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xou)</ins>
-            <del title="nlp 0.90">xou</del>
+            <ins title="nlp 2.00">τοῦ)</ins>
           </span>
         </span>
         <span id="w_454" class="ocr_word" title="bbox 580 3111 726 3143">
@@ -2406,20 +2373,17 @@
         </span>
         <span id="w_458" class="ocr_word" title="bbox 977 3098 1061 3131">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iatlv</ins>
-            <del title="nlp 0.90">iatlv</del>
+            <ins title="nlp 2.00">ἐστὶν</ins>
           </span>
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1086 3110 1106 3142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">-q</ins>
-            <del title="nlp 0.90">-q</del>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_460" class="ocr_word" title="bbox 1134 3109 1171 3129">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">to</ins>
-            <del title="nlp 0.90">to</del>
+            <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
         <span id="w_461" class="ocr_word" title="bbox 1198 3099 1294 3137">
@@ -2436,8 +2400,7 @@
         </span>
         <span id="w_463" class="ocr_word" title="bbox 1380 3098 1451 3138">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xou)</ins>
-            <del title="nlp 0.90">xou</del>
+            <ins title="nlp 2.00">τοῦ)</ins>
           </span>
         </span>
         <span id="w_464" class="ocr_word" title="bbox 1478 3098 1510 3135">
@@ -2486,8 +2449,7 @@
         </span>
         <span id="w_472" class="ocr_word" title="bbox 495 3157 615 3202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’iiov</ins>
-            <del title="nlp 0.90">’iiov</del>
+            <ins title="nlp 2.00">τρόπον</ins>
           </span>
         </span>
         <span id="w_473" class="ocr_word" title="bbox 641 3157 810 3191">
@@ -2502,9 +2464,14 @@
             <del title="nlp 0.90">videtur</del>
           </span>
         </span>
-        <span id="w_475" class="ocr_word" title="bbox 996 3154 1269 3199">
+        <span id="w_475_0" class="ocr_word" title="bbox 996 3154 1269 3199">
           <span class="alternatives">
-            <ins title="nlp 2.00">καταριθμεῖθαι</ins>
+            <ins class="alt" title="nlp 2.00">καταριθμεῖσθαι</ins>
+          </span>
+        </span>
+        <span id="w_475_1" class="ocr_word" title="bbox 996 3154 1269 3199">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_476_0" class="ocr_word" title="bbox 1399 3154 1442 3188">
@@ -2512,14 +2479,14 @@
             <ins class="alt" title="nlp 2.00">32</ins>
           </span>
         </span>
-        <span id="w_476_1" class="ocr_word" title="bbox 1399 3154 1442 3188">
+        <span id="w_476_1_0" class="ocr_word" title="bbox 1399 3154 1442 3188">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_477" class="ocr_word" title="bbox 1467 3167 1554 3188" lang="grc">
+        <span id="w_476_1_1" class="ocr_word" title="bbox 1399 3154 1442 3188">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi: καὶ Ρ</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
       </span>
