--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0564.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0564.html
@@ -762,9 +762,9 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 2059 1168 2116 1205" lang="grc">
+        <span id="w_147_0" class="ocr_word" title="bbox 2059 1168 2116 1205">
           <span class="alternatives">
-            <ins title="nlp 2.00">τᾷ</ins>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
       </span>
@@ -2457,14 +2457,14 @@
             <del title="nlp 0.90">Paris.</del>
           </span>
         </span>
-        <span id="w_471" class="ocr_word" title="bbox 1939 3111 2044 3145" lang="grc">
+        <span id="w_471_0" class="ocr_word" title="bbox 1939 3111 2044 3145">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ι973:</ins>
+            <ins class="alt" title="nlp 2.00">1973:</ins>
           </span>
         </span>
-        <span id="w_472" class="ocr_word" title="bbox 2079 3110 2190 3144" lang="grc">
+        <span id="w_471_1" class="ocr_word" title="bbox 1939 3111 2044 3145">
           <span class="alternatives">
-            <ins title="nlp 2.00">ποιούμεθα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
